fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,3 +83,7 @@
 a:link { color: linktext; }
 a:visited { color: visitedtext; }
 a:active { color: activetext; }
+.markdown * { @apply p-2; }
+.markdown h1 { @apply text-3xl; }
+.markdown h2 { @apply text-3xl; }
+.markdown h3 { @apply text-3xl; }
